contrast fix #1

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,3 +32,5 @@ details[open] summary~* {
         margin-left: 0px
     }
 }
+
+.w3-codespan{background-color:#f3f3f3 }
